# advent-of-code

./: Cargo.toml  README.md  new.sh
2015/day-01/: Cargo.toml
2015/day-02/: Cargo.toml
2015/day-03/: Cargo.toml
2015/day-04/: Cargo.toml
2015/day-05/: README.md
2015/day-06/: Cargo.toml
2015/day-07/: Cargo.toml
2015/day-08/: Cargo.toml
2015/day-09/: Cargo.toml  README.md
2015/day-10/: Cargo.toml
2015/day-11/: Cargo.toml
2015/day-12/: Cargo.toml
2015/day-13/: Cargo.toml
2015/day-14/: Cargo.toml
2021/: .gitignore  Cargo.toml
2021/day-06/: Cargo.toml
2021/day-07/: Cargo.toml
2021/day-09/: Cargo.toml
2021/day-10/: Cargo.toml
2021/day-13/: Cargo.toml
2024/day-01/: Cargo.toml
2024/day-02/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-05/: Cargo.toml
2024/day-06/: Cargo.toml
2025/day-12/: README.md  (+1 more)
aoc_utils/: Cargo.toml
archive/: README.md
day-01/: Cargo.toml  index.js
day-02/: Cargo.toml  index.js
day-03/: Cargo.toml  README.md  index.js
day-04/: Cargo.toml  index.js
day-05/: Cargo.toml  README.md  index.js
day-05-challenge/: Cargo.toml
day-05/regex/: Cargo.toml
day-06/: Cargo.toml
day-07/: Cargo.toml
day-07/src/: board.rs  lib.rs  main.rs
day-08/: Cargo.toml
day-09/: Cargo.toml  README.md
day-09/src/: graph.rs  lib.rs  main.rs
day-10/: Cargo.toml
day-11/: Cargo.toml
day-12/: Cargo.toml
day-12/src/: lib.rs  main.rs
day-13/: Cargo.toml
day-14/: Cargo.toml
day03/: Cargo.toml
day3/: Cargo.toml
rust-utils/: LICENCE  README.md
src/: lib.rs
utils/: Cargo.toml
(+141 files in other folders)
