[package]
name = "day9"
version = "0.1.0"
authors = ["Matthew Brown <matthew.e.brown.17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
lazy_static = "1.4.0"
regex = "1.5.4"
