[package]
name = "day5r"
version = "0.1.0"
authors = ["Matthew Brown <matthew.e.brown.17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "1.2.1"
utils = { path = "../../utils" }
fancy-regex = "0.7.1"
